# protocol-ink

./: .gitignore  .gitmodules  Cargo.toml  README.md  crates.js  index.html  package.json  redspot.config.ts  rust-toolchain.toml  search-index.js  settings.html  source-files.js  utils.ts
.github/workflows/: check.yml  ci.yml  publish-rust-docs.yml
anchor_handler/: all.html  index.html
artifacts/: governed_token_wrapper.contract  governed_token_wrapper.json  mixer.contract  mixer.json  mixer_verifier.contract  mixer_verifier.json  my_psp22.json  poseidon.contract  poseidon.json  vanchor.contract  vanchor.json  vanchor_verifier.contract  vanchor_verifier.json
contracts/anchor/: Cargo.toml  lib.rs  linkable_tree.rs
contracts/anchor/anchor_verifier/: Cargo.toml  lib.rs
contracts/anchor_handler/: Cargo.toml  lib.rs
contracts/governed_token_wrapper/: Cargo.toml  lib.rs
contracts/mixer/: Cargo.toml  README.md  lib.rs  merkle_tree.rs  zeroes.rs
contracts/mixer/mixer_verifier/: Cargo.toml  lib.rs
contracts/mixer_verifier/: Cargo.toml
contracts/poseidon/: Cargo.toml  lib.rs
contracts/signature_bridge/: Cargo.toml  lib.rs
contracts/signature_bridge/signing/: ecdsa.rs  mod.rs
contracts/token_wrapper_handler/: Cargo.toml  lib.rs
contracts/treasury/: Cargo.toml  lib.rs  tests.rs
contracts/treasury_handler/: Cargo.toml  lib.rs
contracts/vanchor/: Cargo.toml  ext_data.rs  field_ops.rs  lib.rs  linkable_merkle_tree.rs  merkle_tree.rs  test_util.rs  zeroes.rs
contracts/vanchor/vanchor_verifier/: Cargo.toml  lib.rs
governed_token_wrapper/: all.html  index.html  sidebar-items.js
governed_token_wrapper/governed_token_wrapper/: constant.ERROR_MSG.html  enum.Error.html  enum.__ink_EventBase.html  index.html  sidebar-items.js  struct.GovernedTokenWrapper.html  struct.GovernedTokenWrapperRef.html  struct.Unwrap.html  struct.Wrap.html  type.Result.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/scale_info/: trait.TypeInfo.js
mixer/: all.html  index.html  sidebar-items.js
mixer/merkle_tree/: index.html  struct.MerkleTree.html
mixer/mixer/: constant.ERROR_MSG.html  constant.ROOT_HISTORY_SIZE.html  enum.Error.html  enum.__ink_EventBase.html  index.html  sidebar-items.js  struct.Deposit.html  struct.Mixer.html  struct.MixerRef.html  struct.Withdraw.html  struct.WithdrawParams.html  type.Result.html
mixer_verifier/: all.html  enum.CustomEnvironment.html  enum.VerifyProof.html  enum.VerifyProofErr.html  index.html  sidebar-items.js
mixer_verifier/mixer_verifier/: enum.Error.html  index.html  sidebar-items.js  struct.MixerVerifier.html  struct.MixerVerifierRef.html  type.Result.html
poseidon/: all.html  index.html  sidebar-items.js
poseidon/poseidon/: enum.Error.html  index.html  sidebar-items.js  struct.Poseidon.html  struct.PoseidonRef.html  type.Result.html
protocol-ink-lib/: Cargo.toml
protocol-ink-lib/src/: blake.rs  field_ops.rs  keccak.rs  lib.rs  utils.rs  vanchor_verifier.rs
protocol_ink_lib/: all.html  index.html  sidebar-items.js
protocol_ink_lib/blake/: fn.blake2b_256_32_bytes_output.html  fn.blake2b_256_4_bytes_output.html  index.html  sidebar-items.js
protocol_ink_lib/field_ops/: index.html  sidebar-items.js  struct.ArkworksIntoField.html  trait.IntoPrimeField.html  type.ArkworksIntoFieldBn254.html
protocol_ink_lib/keccak/: index.html  sidebar-items.js
protocol_ink_lib/utils/: constant.WRAPPING_FEE_CALC_DENOMINATOR.html  constant.ZERO_ADDRESS.html  fn.element_encoder.html  fn.element_encoder_for_eight_bytes.html  fn.element_encoder_for_four_bytes.html  fn.element_encoder_for_one_byte.html  fn.element_encoder_for_sixteen_bytes.html  fn.element_encoder_for_two_bytes.html  fn.is_account_id_zero.html  fn.transform_u32_to_array_of_u8.html  fn.truncate_and_pad.html  index.html  sidebar-items.js
protocol_ink_lib/vanchor_verifier/: index.html  sidebar-items.js
protocol_ink_lib/zeroes/: fn.zeroes.html  index.html  sidebar-items.js
scripts/: deploy.ts  node.sh  nods.sh  test_prep.sh
signature_bridge/: all.html  index.html
src/anchor_handler/: lib.rs.html
src/governed_token_wrapper/: lib.rs.html
src/mixer/: lib.rs.html  merkle_tree.rs.html
src/mixer_verifier/: lib.rs.html
src/poseidon/: lib.rs.html
src/protocol_ink_lib/: blake.rs.html  field_ops.rs.html  keccak.rs.html  lib.rs.html  utils.rs.html  vanchor_verifier.rs.html  zeroes.rs.html
src/signature_bridge/: lib.rs.html
src/token_wrapper_handler/: lib.rs.html
src/treasury/: lib.rs.html  tests.rs.html
src/treasury_handler/: lib.rs.html
src/vanchor/: lib.rs.html  linkable_merkle_tree.rs.html  merkle_tree.rs.html
temp/anchor/: Cargo.toml  lib.rs  linkable_tree.rs
temp/vanchor/: Cargo.toml
tests/: anchorHandler.test.ts  erc20.test.ts  mixer.test.ts  signatureBridge.test.ts  tokenWrapper.test.ts  tokenWrapperHandler.test.ts  tokenWrapperNegativeTest.test.ts  treasury.test.ts  treasuryHandler.test.ts  util.ts  vanchor.test.ts
tests/governed_token_wrapper/: tokenWrapper.test.ts  tokenWrapperNegativeTests.test.ts
tests/protocol-substrate-fixtures/: .gitignore  README.md
tests/protocol-substrate-fixtures/builder/: Cargo.toml
tests/protocol-substrate-fixtures/builder/src/: main.rs
tests/psp22_artifact/: my_psp22.contract
tests/treasury/: treasury.test.ts  treasuryNegativeTests.test.ts
token_wrapper_handler/: all.html  index.html
treasury/: all.html  index.html  sidebar-items.js  struct.Treasury.html  struct.TreasuryRef.html
treasury/treasury/: struct.Treasury.html  struct.TreasuryRef.html
treasury_handler/: all.html  index.html
vanchor/: all.html  index.html  sidebar-items.js
vanchor/vanchor/: constant.ERROR_MSG.html  constant.INK_CHAIN_TYPE.html  enum.Error.html  enum.__ink_EventBase.html  index.html  sidebar-items.js  struct.ExtData.html  struct.ProofData.html  struct.TokenWrapperData.html  struct.TransactDeposit.html  struct.TransactWithdraw.html  struct.VAnchor.html  struct.VAnchorRef.html  type.Result.html
(+68 files in other folders)
