[package]
name = "anchor"
version = "0.1.0"
authors = ["Drew Stone <drew@webb.tools>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
ink_primitives = { version = "3.0.0-rc6", default-features = false }
ink_metadata = { version = "3.0.0-rc6", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc6", default-features = false }
ink_storage = { version = "3.0.0-rc6", default-features = false }
ink_lang = { version = "3.0.0-rc6", default-features = false }

poseidon = { path = "../poseidon", default-features = false, features = ["ink-as-dependency"] }
verifier = { package = "anchor_verifier", path = "anchor_verifier", default-features = false, features = ["ink-as-dependency"] }
mixer = { path = "../mixer", default-features = false, features = ["ink-as-dependency"] }
wasm-utils = { version = "0.1.2", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.8.4"
hex = "0.4"

ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
ark-ff = { version = "^0.3.0", default-features = false}
ark-ec = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ]}
ark-std = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
arkworks-gadgets  = { version = "0.4.19", default-features = false }
arkworks-circuits = { version = "0.4.19", default-features = false }
arkworks-utils    = { version = "0.4.19", features = ["default_poseidon", "default_mimc"], default-features = false }

[lib]
name = "anchor"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",

    "scale/std",
    "scale-info/std",
    "poseidon/std",
    "verifier/std",
    "mixer/std",
]
ink-as-dependency = []
