[package]
name = "mixer"
version = "0.1.0"
authors = ["Drew Stone <drew@webb.tools>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
ink_primitives = { version = "3.0.0-rc9", default-features = false }
ink_prelude = { version = "3.0.0-rc9", default-features = false }
ink_metadata = { version = "3.0.0-rc9", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc9", default-features = false }
ink_storage = { version = "3.0.0-rc9", default-features = false }
ink_lang = { version = "3.0.0-rc9", default-features = false }

poseidon = { path = "../poseidon", default-features = false, features = ["ink-as-dependency"] }
verifier = { package = "mixer_verifier", path = "mixer_verifier", default-features = false, features = ["ink-as-dependency"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
    "full"
] }
scale-info = { version = "2", default-features = false, features = [
    "derive",
], optional = true }

# brush = { git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp22"] }

[lib]
name = "mixer"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",

    # "brush/std",
    "poseidon/std",
    "verifier/std",
]
ink-as-dependency = []
