[package]
name = "poseidon"
version = "0.1.0"
authors = ["Drew Stone <drew@webb.tools>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
ink_prelude = { version = "3.0.0-rc6", default-features = false }
ink_primitives = { version = "3.0.0-rc6", default-features = false }
ink_metadata = { version = "3.0.0-rc6", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc6", default-features = false }
ink_storage = { version = "3.0.0-rc6", default-features = false }
ink_lang = { version = "3.0.0-rc6", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }

ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }

arkworks-gadgets = { version = "0.4.19", default-features = false }
arkworks-utils = { version = "0.4.19", default-features = false, features = [
    "poseidon_bn254_x5_3",
    "poseidon_bn254_x5_4",
    "poseidon_bn254_x5_5",
]}

[lib]
name = "poseidon"
path = "lib.rs"
crate-type = [
	"cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",

    "scale/std",
    "scale-info/std",

    "ark-ff/std",
    "ark-std/std",
    "ark-bn254/std",
    "ark-crypto-primitives/std",
    "arkworks-gadgets/std",
    "arkworks-utils/std",
]
ink-as-dependency = []
