[package]
name = "vanchor"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink_primitives = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# Brush dependency
brush = { tag = "v1.6.1", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp22"] }


poseidon = { path = "../poseidon", default-features = false, features = ["ink-as-dependency"] }
governed_token_wrapper = { path = "../governed_token_wrapper", default-features = false, features = ["ink-as-dependency"] }

protocol-ink-lib = {path = "../../protocol-ink-lib"}

[lib]
name = "vanchor"
path = "lib.rs"
crate-type = [
    "cdylib",
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",

    "poseidon/std",
    "governed_token_wrapper/std",

    "brush/std",
]
ink-as-dependency = []
