[package]
name = "vanchor"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "~3.3.0", default-features = false }
ink_metadata = { version = "~3.3.0",  default-features = false, features = ["derive"], optional = true }
ink_env = { version = "~3.3.0",  default-features = false }
ink_storage = { version = "~3.3.0",  default-features = false }
ink_lang = { version = "~3.3.0", default-features = false }
ink_prelude = { version = "~3.3.0",  default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

# Brush dependency
openbrush = { tag = "v2.2.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp22"] }

ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }

arkworks-setups = { version = "1.1.1",  features = ["r1cs"], default-features = false }
arkworks-native-gadgets = { version = "1.0.0", default-features = false }

ark-ec = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }

poseidon = { path = "../poseidon", default-features = false, features = ["ink-as-dependency"] }
governed_token_wrapper = { path = "../governed_token_wrapper", default-features = false, features = ["ink-as-dependency"] }

protocol-ink-lib = {path = "../../protocol-ink-lib"}

[lib]
name = "vanchor"
path = "lib.rs"
crate-type = [
    "cdylib",
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",

    "poseidon/std",
    "governed_token_wrapper/std",

    "openbrush/std",
]
ink-as-dependency = []
