[package]
name = "mixer_verifier"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
ink_primitives = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { tag = "v3.0.1", git = "https://github.com/paritytech/ink", default-features = false }

ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }

arkworks-native-gadgets = { version = "0.5.3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, features = [
    "derive",
], optional = true }

[lib]
name = "mixer_verifier"
path = "lib.rs"
crate-type = [
    "cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",

    "ark-ff/std",
    "ark-ec/std",
    "ark-groth16/std",
    "ark-serialize/std",
    "ark-std/std",
    "ark-bn254/std",
    "ark-crypto-primitives/std",
    "arkworks-native-gadgets/std",
]
ink-as-dependency = []
