[package]
name = "builder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arkworks-setups = { version = "1.0.0", features = ["r1cs", "parallel"] }
arkworks-utils = { version = "1.0.0", features = ["parallel"] }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
zeroize = { version = ">=1, <1.4", default-features = false }


ark-std = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = {version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
# ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }